fix title alignment

--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -30,9 +30,9 @@ h5
   background-color $bg-color-trans20
 
 .splash-head
-  margin-top 15em
+  margin-top 10em
   @media screen and (min-width: 48em)
-    margin-top 5em
+    margin-top 2em
 
 .home-menu.pure-menu-open
   font-size 1.25em
@@ -45,3 +45,5 @@ h5
 
 .u-pushup
   margin -1em
+  a
+    color $white
